# projects

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
AviToExrSequence/: AviToExrSequence.sln  AviToExrSequence.vcxproj  AviToExrSequence.vcxproj.filters  Main.cpp
BMRawAVIv210ToDng/: AviMainHeader.cs  AviReader.cs  AviStreamHeader.cs  BitmapInfoHeader.cs  CMakeLists.txt  Common.cs  Convert.cs  FourCCHeader.cs  ListHeader.cs  Program.cs  RiffHeader.cs
BMRawAVIv210ToDng/Properties/: AssemblyInfo.cs
BMRawYuv420p10ToDng/: CMakeLists.txt  Convert.cs
BMRawYuv420p10ToDng/Properties/: AssemblyInfo.cs
BMRawYuv422p10ToDng/: CMakeLists.txt  Convert.cs  Program.cs
BMRawYuv422p10ToTiff/: CMakeLists.txt  Convert.cs  Program.cs
BMRawYuv422p10ToTiff/Properties/: AssemblyInfo.cs
Common/: MLAVICommon.h  MLAviCommon.cpp  MLAviReader.h  MLAviWriter.cpp  MLAviWriter.h  MLBmpReader.cpp  MLBmpReader.h  MLBmpWriter.cpp  MLBmpWriter.h  MLColorConvShaderConstants.h  MLColorGamut.cpp  MLColorGamut.h  MLConverter.cpp  MLConverter.h  MLDX12.cpp  MLDX12.h  MLDX12Common.cpp  MLDX12Imgui.cpp  MLDX12Imgui2.cpp  MLEnumToStr.cpp  MLEnumToStr.h  MLExrReader.cpp  MLExrReader.h  MLExrWriter.cpp  MLExrWriter.h  MLImage.h  MLImage2.cpp  MLImage2.h  MLPngReader.cpp  MLPngReader.h  MLPngWriter.cpp  MLPngWriter.h  MLSaveSettings.cpp  MLVideoCapUser.cpp  MLVideoCapUser.h  MLWinApp.h  imgui_draw.cpp  imgui_impl_win32.cpp
DngHeaderDump/: CMakeLists.txt  Program.cs
DngHeaderDump/Properties/: AssemblyInfo.cs
DngRW/: CMakeLists.txt  DngReader.cs  DngWriter.cs  IFDEntry.cs  IFDRational.cs
DngRW/Properties/: AssemblyInfo.cs
DumpAVIHeaders/: CMakeLists.txt  DumpAVIHeaders.csproj  DumpAVIHeaders.sln  Program.cs
DumpAVIHeaders/Properties/: AssemblyInfo.cs
EigenTest/: EigenTest.sln  Project1.vcxproj  Project1.vcxproj.filters  README.TXT  main.cpp  vcpkg.json
HDR10Capture2019/: 00README.txt  Common.h  HDR10Capture.sln  HDR10Capture.vcxproj  HDR10Capture.vcxproj.filters  IMLVideoCapUserCallback.h  MLAVICommon.h  MLAviWriter.cpp  MLAviWriter.h  MLBmpReader.cpp  MLBmpReader.h  MLBmpWriter.h  MLColorConvShaderConstants.h  MLColorGamut.cpp  MLConverter.cpp  MLConverter.h  MLDX12App.cpp  MLDX12App.h  MLDX12Common.cpp  MLDX12Common.h  MLDX12Imgui.h  MLExrReader.cpp  MLExrWriter.cpp  MLExrWriter.h  MLImage.cpp  MLImage.h  MLPngReader.cpp  MLPngReader.h  MLPngWriter.cpp  MLPngWriter.h  MLSaveSettings.cpp  MLSaveSettings.h  MLVideoCapUser.cpp  MLVideoCapUser.h  MLWinApp.cpp  Main.cpp  MainApp.cpp  MainApp.h  README.txt  Resource.rc  (+8 more)
HDR10Viewer2/: 00README.txt  Common.h  EnumToStr.cpp  EnumToStr.h  ExrReader.cpp  ExrReader.h  HDR10Viewer2.sln  HDR10Viewer2.vcxproj  HDR10Viewer2.vcxproj.filters  License_Microsoft_DirectX_Graphics_Samples.txt  MLAVICommon.h  MLAviWriter.cpp  MLBmpReader.cpp  MLBmpReader.h  MLColorConvShaderConstants.h  MLColorGamut.cpp  MLColorGamut.h  MLDX12.h  MLDX12App.cpp  MLDX12App.h  MLDX12Common.cpp  MLDX12Common.h  MLDX12Imgui.cpp  MLDX12Imgui.h  MLDrawings.cpp  MLDrawings.h  MLEnumToStr.cpp  MLExrReader.cpp  MLImage.cpp  MLImage.h  MLPngReader.cpp  MLSaveSettings.cpp  MLSaveSettings.h  MLVideoTime.cpp  Main.cpp  PngReader.cpp  PngReader.h  README.txt  Resource.rc  WinApp.cpp  (+6 more)
ImageToDng/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
ImageToDng/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MLDX12VideoCapture/: 00README.txt  Common.h  DXSampleHelper.h  MLAVICommon.h  MLAviCommon.cpp  MLAviReader.cpp  MLAviReader.h  MLAviWriter.cpp  MLAviWriter.h  MLCapturedImage.h  MLConverter.cpp  MLConverter.h  MLDX12.h  MLDX12App.cpp  MLDX12App.h  MLDX12Common.h  MLDX12Imgui.cpp  MLDX12Imgui.h  MLDX12VideoCapture.sln  MLDX12VideoCapture.vcxproj  MLDX12VideoCapture.vcxproj.filters  MLDrawings.cpp  MLDrawings.h  MLVideoTime.h  Main.cpp  WinApp.cpp  WinApp.h  imgui.ini  shadersRGB.hlsl  shadersYUV.hlsl
MLDecklinkCapture/: IMLVideoCaptureCallback.h  License_DecklinkSDK10_11_4.txt  MLDecklinkCapture.vcxproj  MLDecklinkCapture.vcxproj.filters  MLVideoCapture.cpp  MLVideoCapture.h  MLVideoCaptureEnum.cpp  MLVideoCaptureEnum.h  README.txt
MLDecklinkCapture2019/: IMLVideoCaptureCallback.h  MLDecklinkCapture2019.vcxproj  MLDecklinkCapture2019.vcxproj.filters  MLVideoCapture.cpp  MLVideoCapture.h  MLVideoCaptureDeviceEnum.cpp  MLVideoCaptureDeviceEnum.h  MLVideoCaptureEnumToStr.cpp  MLVideoCaptureEnumToStr.h  MLVideoCaptureVideoFormat.h  README.txt
MultiView/: AryTest.py  Common.py  DeltaTest.py  EllipN.csv  EllipN34.csv  EllipNHalf.csv  FNSEllipRegressor.py  FNSRansac.py  FNSTwoCamRegressor.py  Fundamental_to_CamParams.py  LSQTwoCamRegressor.py  MultiView.pyproj  MultiView.sln  PlotTest.py  README.txt  Rank_Correction.py  Ransac.py  Ransac_TwoCam.py  Run_Ellip_FNSRansac.py  Run_GenerateTwoCameraPoints.py  Run_TwoCam_FNSRansac.py  Run_TwoCam_LeastSquare.py  Run_TwoCam_Ransac.py  Sandbox.py  a.ipynb  pointXY2.csv  twoCamPoints.csv  twoCamPoints2.csv  twoCamPoints2_outlier10.csv
PngToBmp/: MLBmpWriter.h  (+5 more)
(+66 files in other folders)
